// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`operations selectors  - operations 1`] = `
Immutable.Map {
  "test-operation-id": Immutable.Operation {
    "opId": "test-operation-id",
    "type": "shieldBalance",
    "meta": Immutable.Record {
      "amount": "234.14324",
      "from": "from-address",
      "to": "to-address",
    },
    "txId": "transaction-id",
    "error": null,
    "status": "success",
  },
  "test-operation-id-1": Immutable.Operation {
    "opId": "test-operation-id",
    "type": "pendingMessage",
    "meta": Immutable.Record {
      "message": Immutable.Map {
        "id": "test-message-id",
        "type": 1,
        "createdAt": 1551963828,
        "message": "This is some message test-message-id",
        "signature": Object {
          "data": Array [
            202,
            15,
            119,
            117,
            178,
            163,
            37,
            253,
            154,
            252,
            231,
            166,
            195,
            137,
            183,
            234,
            71,
            243,
            80,
            122,
            59,
            238,
            222,
            166,
            186,
            69,
            90,
            160,
            160,
            50,
            104,
            190,
            10,
            207,
            36,
            153,
            83,
            108,
            75,
            44,
            43,
            251,
            163,
            248,
            121,
            50,
            116,
            127,
            154,
            101,
            218,
            181,
            222,
            56,
            194,
            169,
            79,
            74,
            219,
            181,
            87,
            23,
            91,
            207,
          ],
          "type": "Buffer",
        },
      },
      "channelId": "test-channel-id",
    },
    "txId": "transaction-id",
    "error": null,
    "status": "success",
  },
}
`;

exports[`operations selectors  - pendingMessages 1`] = `
Immutable.Map {
  "test-operation-id-1": Immutable.Operation {
    "opId": "test-operation-id",
    "type": "pendingMessage",
    "meta": Immutable.Record {
      "message": Immutable.Map {
        "id": "test-message-id",
        "type": 1,
        "createdAt": 1551963828,
        "message": "This is some message test-message-id",
        "signature": Object {
          "data": Array [
            202,
            15,
            119,
            117,
            178,
            163,
            37,
            253,
            154,
            252,
            231,
            166,
            195,
            137,
            183,
            234,
            71,
            243,
            80,
            122,
            59,
            238,
            222,
            166,
            186,
            69,
            90,
            160,
            160,
            50,
            104,
            190,
            10,
            207,
            36,
            153,
            83,
            108,
            75,
            44,
            43,
            251,
            163,
            248,
            121,
            50,
            116,
            127,
            154,
            101,
            218,
            181,
            222,
            56,
            194,
            169,
            79,
            74,
            219,
            181,
            87,
            23,
            91,
            207,
          ],
          "type": "Buffer",
        },
      },
      "channelId": "test-channel-id",
    },
    "txId": "transaction-id",
    "error": null,
    "status": "success",
  },
}
`;
